--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.0",
     "csvjson": "^5.1.0",
     "csvtojson": "^2.0.10",
     "fs": "0.0.1-security",
     "json2csv": "^5.0.6",
     "lodash": "^4.17.20",
+    "mocha": "^8.2.1",
     "moment": "^2.29.1"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
